--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,14 +6,15 @@
 
 - name: ping
   win_ping:
+    data: pong
 
- - name: updates!
-   win_updates:
-     category_names:
-       - CriticalUpdates
-       - SecurityUpdates
-     state: installed
-     reboot: yes
+- name: updates
+  win_updates:
+    category_names:
+      - CriticalUpdates
+      - SecurityUpdates
+    state: installed
+    reboot: yes
 
 - name: formattazione
   win_format:
@@ -31,4 +32,3 @@
 - name: proxy
   win_http_proxy:
     source: ie
-
